--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: 19.3b0
     hooks:
     -   id: black
+        language_version: python3
 -   repo: https://gitlab.com/pycqa/flake8
     rev: ''  # pick a git hash / tag to point to
     hooks:
